sonarqube-1/templates/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:10.4.1
          ports:
            - containerPort: 9000
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /opt/sonarqube/data
            - name: extensions
              mountPath: /opt/sonarqube/extensions
            - name: logs
              mountPath: /opt/sonarqube/logs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarqube-data-pvc
        - name: extensions
          persistentVolumeClaim:
            claimName: sonarqube-extensions-pvc
        - name: logs
          persistentVolumeClaim:
            claimName: sonarqube-logs-pvc
