sonarqube-1/templates/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres
  namespace: sonarqube
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}  # allow all pods in namespace
      ports:
        - protocol: TCP
          port: 5432
