sonarqube-1/templates/sonarqube-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube-allow-ingress
  namespace: sonarqube
spec:
  podSelector:
    matchLabels:
      app: sonarqube
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: sonarqube  # restrict to the same namespace for added security
